# minal

./: CLAUDE.md  Cargo.toml  PLAN.md  README.md  issues.json
.claude/: settings.local.json
.claude/agents/: architect.md  build-resolver.md  code-reviewer.md  implementer.md  ios-designer.md  ios-developer.md  minal-ai.md  minal-app.md  minal-config.md  minal-core.md  minal-renderer.md  planner.md  uiux-designer.md
.claude/skills/: add-ai-provider.md  add-shader.md  add-vt-sequence.md  build.md  create-pr.skill  init-crate.md  shell-integration.md
.claude/skills/add-ai-provider/: SKILL.md
.claude/skills/add-shader/: SKILL.md
.claude/skills/add-vt-sequence/: SKILL.md
.claude/skills/create-pr/: SKILL.md
.claude/skills/create-pr/references/: api_reference.md  pr-template.md
.claude/skills/create-pr/scripts/: example.py
.claude/skills/implement/: SKILL.md
.claude/skills/init-crate/: SKILL.md
.claude/skills/issue/: SKILL.md
.claude/skills/plan/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/shell-integration/: SKILL.md
.github/workflows/: ci.yml
crates/minal-ai/: Cargo.toml
crates/minal-ai/src/: agent.rs  analyzer.rs  anthropic.rs  cache.rs  chat.rs  completion.rs  context.rs  error.rs  factory.rs  fallback.rs  keystore.rs  lib.rs  ollama.rs  ollama_health.rs  openai.rs  provider.rs  provider_status.rs  types.rs
crates/minal-ai/src/mcp/: client.rs  manager.rs  mod.rs  registry.rs  transport.rs  types.rs
crates/minal-config/: Cargo.toml
crates/minal-config/src/: ai.rs  clipboard.rs  error.rs  font.rs  keybind.rs  lib.rs  mcp.rs  plugin.rs  shell.rs  theme.rs  theme_presets.rs  watcher.rs  window.rs
crates/minal-core/: Cargo.toml
crates/minal-core/benches/: grid_bench.rs  grid_ops.rs  vt_parse.rs
crates/minal-core/src/: ansi.rs  cell.rs  charset.rs  cursor.rs  error.rs  grid.rs  handler.rs  lib.rs  mouse.rs  pty.rs  scrollback.rs  selection.rs  shell_integration.rs  snapshot.rs  term.rs
crates/minal-plugin/: Cargo.toml
crates/minal-plugin/src/: ai_bridge.rs  error.rs  event.rs  lib.rs  manager.rs  manifest.rs  runtime.rs
crates/minal-renderer/: Cargo.toml
crates/minal-renderer/src/: agent_panel.rs  atlas.rs  chat_panel.rs  context.rs  error.rs  error_panel.rs  lib.rs  mcp_panel.rs  rect.rs  renderer.rs  test_harness.rs  text.rs
crates/minal-renderer/src/shaders/: rect.wgsl  text.wgsl
docs/: plugin-development.md
examples/plugins/echo-ai-provider/: Cargo.toml  plugin.toml
examples/plugins/echo-ai-provider/src/: lib.rs
examples/plugins/hello-plugin/: Cargo.toml  plugin.toml
examples/plugins/hello-plugin/src/: lib.rs
scripts/: create-issues.sh
shell-integration/: minal.bash  minal.fish  minal.zsh
src/: agent.rs  app.rs  chat.rs  config_watcher.rs  error.rs  error_panel_state.rs  event.rs  io.rs  macos.rs  main.rs  mcp_panel_state.rs  mouse.rs  pane.rs  tab.rs  window.rs
