[workspace]
members = [
    "crates/minal-core",
    "crates/minal-renderer",
    "crates/minal-ai",
    "crates/minal-config",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85"
version = "0.1.0"
authors = ["Minal Contributors"]
license = "MIT"
repository = "https://github.com/m1ng112/minal"

[workspace.dependencies]
# Terminal core
vte = "0.13"

# Rendering
bytemuck = { version = "1", features = ["derive"] }
wgpu = "28"
winit = "0.30"
cosmic-text = "0.12"
guillotiere = "0.6"
pollster = "0.4"

# Async & threading
tokio = { version = "1", features = ["full"] }
crossbeam-channel = "0.5"
async-trait = "0.1"
futures-core = "0.3"
tokio-stream = "0.1"
bytes = "1"

# System / PTY
rustix = { version = "1", features = ["pty", "termios", "process", "pipe"] }
libc = "0.2"

# AI & HTTP
reqwest = { version = "0.12", features = ["json", "stream"] }
regex = "1"
lru = "0.12"

# Config
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"

# Clipboard
copypasta = "0.10"
base64 = "0.22"

# Filesystem
dirs = "6"
notify = "7"

# Testing
static_assertions = "1"
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

# Keychain (macOS)
security-framework = "3"

# Lock-free data structures
arc-swap = "1"

# Internal crates
minal-core = { path = "crates/minal-core" }
minal-renderer = { path = "crates/minal-renderer" }
minal-ai = { path = "crates/minal-ai" }
minal-config = { path = "crates/minal-config" }

[package]
name = "minal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "AI-first terminal emulator"

[dependencies]
minal-core.workspace = true
minal-renderer.workspace = true
minal-ai.workspace = true
minal-config.workspace = true
winit.workspace = true
crossbeam-channel.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
vte.workspace = true
wgpu.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
notify.workspace = true
copypasta.workspace = true
base64.workspace = true
arc-swap = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSMenu", "NSMenuItem", "NSApplication", "NSRunningApplication", "NSEvent"] }
objc2-foundation = { version = "0.2", features = ["NSString"] }
