[package]
name = "minal-ai"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "AI engine: provider abstraction, completion, chat, analysis"

[dependencies]
minal-core.workspace = true
minal-config.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
async-trait.workspace = true
futures-core.workspace = true
tokio-stream.workspace = true
bytes.workspace = true
lru.workspace = true

[dev-dependencies]
tempfile.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"
