[package]
name = "minal-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Configuration management: TOML parsing, themes, fonts, keybinds"

[dependencies]
serde.workspace = true
toml.workspace = true
dirs.workspace = true
tracing.workspace = true
thiserror.workspace = true
