[package]
name = "minal-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Terminal emulation core: VT parser, grid, PTY"

[dependencies]
vte.workspace = true
tracing.workspace = true
thiserror.workspace = true
rustix.workspace = true
tokio.workspace = true
libc.workspace = true
base64.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "vt_parse"
harness = false

[[bench]]
name = "grid_ops"
harness = false
