[package]
name = "minal-renderer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "GPU rendering engine: wgpu pipelines, glyph atlas, text rendering"

[dependencies]
minal-core.workspace = true
wgpu.workspace = true
winit.workspace = true
pollster.workspace = true
cosmic-text.workspace = true
guillotiere.workspace = true
bytemuck.workspace = true
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
static_assertions.workspace = true
